basic functionalities complete
